# immo

./: .env  .env.example  .gitignore  3rdparty.md  LongTerm.md  MVP.md  README.md  docker-compose.yml
backend/: .dockerignore  .env  Dockerfile  README.md  alembic.ini  analysis-reembed.md  package.json  pyproject.toml  requirements.txt  test_anthropic_api.py
backend/app/: db_init.py  main.py
backend/app/ai/: prompts.py  service.py  service.py.deprecated
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  content.py  sections.py  stories.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: enums.py  novels.py
backend/app/models/orm/: __init__.py  content.py  section.py  story.py
backend/app/models/schemas/: __init__.py  content.py  section.py  story.py
backend/app/services/: ai_service.py  generation.py  generation.py.deprecated
backend/app/services/content/: __init__.py  repository.py  service.py
backend/app/services/generation/: __init__.py  llm_service.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: add_simplified_status_enums.py  add_style_description_to_sections.py  be9b7699b828_add_content_generations_table.py  update_generation_status_enum.py
elatio/: chat.md
elicio/: Data.md  README.md  delivery.md  ingestion.md  plan.md
elicio/activity-tracker/desktop/: Cargo.toml
elicio/activity-tracker/desktop/src/aggregator/: db.rs  health.rs  mod.rs  retention.rs  schema.rs  text_capture.rs
elicio/activity-tracker/desktop/src/federated/: mod.rs
elicio/activity-tracker/desktop/src/ui/: mod.rs
elicio/activity-tracker/tests/: Cargo.toml  README.md
elicio/activity-tracker/tests/src/: lib.rs
elicio/activity-tracker/tests/test_data/: events.json  health_metrics.json  sleep.json  workouts.json
elicio/activity-tracker/tests/tests/: integration_tests.rs
frontend/: Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+68 files in other folders)
