[package]
name = "activity-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "json", "chrono"] }
rusqlite = { version = "0.29", features = ["bundled", "sqlcipher"] }

# gRPC server
tonic = "0.9"
prost = "0.11"
tower = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
once_cell = "1.17"

[build-dependencies]
tonic-build = "0.9"
