[package]
name = "activity-tracker-tests"
version.workspace = true
edition.workspace = true

[lib]
name = "activity_tracker_tests"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/integration_tests.rs"

[dependencies]
activity-tracker = { path = "../desktop" }

# Testing dependencies
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
